--- a/MyBlog/authentication/templates/login.html
+++ b/MyBlog/authentication/templates/login.html
@@ -12,13 +12,19 @@
     <div class='main-container'>
         <div class='container-wrapper'>
             <div class="left-container flex-item">
-                <h1>well come to blogosphare</h1>
-                <div class="slogan-logo" style="display: flex;">
-                    <img src="{% static 'blog_logo.svg' %}" alt="">
-                    <!-- <h1>BLOGOSPHARE</h1> -->
+                <div class="background_img">
+                    <img src="{% static 'LoginBackground.jpg' %}" alt="">
                 </div>
-                <h1 class="fw-bold">Dive into the Depths of Knowledge</h1>
-                <h5>Create a unique and beautiful blog easily.</h5>
+
+                <div class="welcome-text">
+                    <div class="logo" style="display: flex;">
+                        <img src="{% static 'blog_logo.svg' %}" alt="">
+                    </div>
+                    <h1>welcome to blogosphare</h1>
+                    <h2>Dive into the Depths of Knowledge</h2>
+                    <h5>Create a unique and beautiful blog easily.</h5>
+                    <p>Gain access to exclusive content, connect with other users, and customize your experience through signing in</p>
+                </div>
             </div>
             <div class="right-container flex-item">
                 <h3>Login page</h3>
