--- a/MyBlog/authentication/templates/login.html
+++ b/MyBlog/authentication/templates/login.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static '/Authentication/LoginPage/CSS/LoginPageStyling.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,16 +23,38 @@
 
                 <div class="welcome-text">
                     <div class="logo" style="display: flex;">
-                        <img src="{% static 'blog_logo.svg' %}" alt="">
+                        <img src="{% static 'blog_logo_login.svg' %}" alt="">
                     </div>
-                    <h1>welcome to blogosphare</h1>
-                    <h2>Dive into the Depths of Knowledge</h2>
-                    <h5>Create a unique and beautiful blog easily.</h5>
-                    <p>Gain access to exclusive content, connect with other users, and customize your experience through signing in</p>
+                    <div class="welcome-text-slogan">
+                        <h1 class="mb-2">welcome to blogosphare</h1>
+                        <h2>Dive into the Depths of Knowledge</h2>
+                    </div>
+                    <div class="welcome-text-intro">
+                        <p>Create a unique and beautiful blog easily.<br>
+                        Gain access to exclusive content, connect with other users, and customize your experience through signing in</p>
+                    </div>           
+                    <div>
+                        <button class="btn btn-danger  px-3 rounded-pill fs-5">sign up</button>
+                    </div>
                 </div>
             </div>
             <div class="right-container flex-item">
-                <h3>Login page</h3>
+                <div class="login-page">
+                    <h2 class="mb-2">Login to Your account</h2>
+                    <p class="mb-4 fs-5" style="color: grey">Please enter your details</p>
+                    <form action="">
+                        <div class="email pb-4"> 
+                            <label for="">Email Address</label><br>
+                            <input class="py-2 px-2" type="email" placeholder="Enter your email">
+                        </div>
+                        <div class="password pb-4"> 
+                            <label for="">Password</label><br>
+                            <input class="py-2 px-2" type="password" placeholder="Enter your password">
+                        </div>
+                        <button class="btn btn-danger px-4">Login</button>
+                    </form>
+                    <p class="mt-4" style="color: grey;">Don't have account ? <span><a style="color:red" href="">Register here</a></span></p>
+                </div>
             </div>
         </div>
     </div>
