--- a/MyBlog/static/Authentication/LoginPage/CSS/LoginPageStyling.css
+++ b/MyBlog/static/Authentication/LoginPage/CSS/LoginPageStyling.css
@@ -47,6 +47,7 @@
 
     height: 100%;
     width: 100%;
+
 }
 
 .welcome-text{
@@ -55,21 +56,64 @@
     top: 45%;
     transform: translate(-50%,-50%);
     text-align: center;
-    width: 80%;
+    width: 700px;
+    /* border: 1px solid red; */
+    
 }
 
 .logo{
-    height: 7rem;
-    width: 7rem;
+    height: 7.5rem;
+    width: 7.5rem;
     margin: 0 auto;
 }
 
 .welcome-text h1{
-    font-weight: 700;
+    font-weight: 900;
     font-size: 3rem;
+    
 }
 
 .welcome-text h2{
-    font-weight: 500;
-    
+    font-weight: 700;
+}
+
+
+.welcome-text-intro{
+    margin-top: 1rem;
+    line-height: 2.3rem;
+    width: 100%;
+    font-weight: 400;
+    font-size: 1.2rem;
+    /* border: 1px solid red; */
+    /* border: 1px solid red; */
+}
+
+
+
+.right-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.login-page{
+    /* border: 1px solid red; */
+    width: 500px;
+}
+
+.email input{
+    border: 1px solid rgb(196, 196, 196);
+    width: 350px;
+}
+.password input{
+    border: 1px solid rgb(196, 196, 196);
+    width: 350px;
+}
+
+.email label,
+.password  label{
+    color: rgb(105, 105, 105);
+    margin-bottom: 5px;
 }
