--- a/MyBlog/common/templates/forms_base.html
+++ b/MyBlog/common/templates/forms_base.html
@@ -34,7 +34,9 @@
                         Gain access to exclusive content, connect with other users, and customize your experience through signing in</p>
                     </div>           
                     <div>
-                        <button class="btn btn-danger  px-3 rounded-pill fs-5">sign up</button>
+                        <form action="http://127.0.0.1:8000/auth/signup/">
+                            <button  class="btn btn-danger  px-3 rounded-pill fs-5">sign up</button>
+                        </form>
                     </div>
                 </div>
             </div>
