--- a/MyBlog/home/templates/home.html
+++ b/MyBlog/home/templates/home.html
@@ -15,14 +15,20 @@
         </div>
         <h1 class="fw-bold">Dive into the Depths of Knowledge</h1>
         <h5>Create a unique and beautiful blog easily.</h5>
-        {% if request.user.is_authenticated %}
+
         <form action="{% url 'addblog' %}">
             <button class="btn btn-success fw-bold">Share you thoughts</button>
         </form>
+
+        {% comment %}
+        {% if request.user.is_authenticated %}
+
         {% else %}
-        <button class="btn btn-success fw-bold" type="button" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">Share you thoughts</button>
+        <form action="{% url 'login' %}?next={% url 'addblog' %}">
+            <button class="btn btn-success fw-bold">Share you thoughts</button>
+        </form>
         {% endif %}
+        {% endcomment %}
 
     </div>
 </section>
