--- a/MyBlog/user/templates/userprofile.html
+++ b/MyBlog/user/templates/userprofile.html
@@ -11,13 +11,18 @@
         margin: 6rem 11% 0;
         /* border: 1px solid red; */
         min-height: 75vh;
+
       
     }
 
     .use_detail {
         /* border: 1px solid red; */
         border-left: 1px solid rgb(221, 221, 221);
-        flex-basis: 70rem;
+        flex:1;
+    }
+
+    .user_blog_detail{
+        flex: 2;
     }
 </style>
 <section class="profile_container">
