--- a/MyBlog/blog/templates/categoryBlogs.html
+++ b/MyBlog/blog/templates/categoryBlogs.html
@@ -8,20 +8,23 @@
 {% block css %}
 
 <style>
-    .blog-section{
-        /* border: 1px solid red; */
-    }
+
 
     .category_scroll_bar{
         min-width: 500px;
         height: 40px;
-        width: 800px;
+        width: 900px;
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
         scroll-behavior: smooth;
 
     }
 
+
+    .blog_img{
+        height: 100px;
+        width: 100px;
+    }
     .wrapper::-webkit-scrollbar{
         display: none;
     }
@@ -40,23 +43,19 @@
 
  {% block body %}
 <div class="main-section">
-    <div class="blog-section d-flex  justify-content-center my-3 align-items-center">
+    <div class="d-flex   justify-content-center my-5 align-items-center">
         <button id='left-scroll' class='px-3'><i class="fa fa-angle-left fs-2"></i></button>
         <div id="category_list" class="category_scroll_bar  rounded-pill d-flex gap-2 overflow-x-auto overflow-y-hidden">
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
-            <button class="btn rounded-pill" style="background: #f2f2f2;">programming</button>
+            {% for category in category %}
+            <button class="btn rounded-pill {% if active_category == category.category_name %} border border-dark {% endif %} " style="background: #f2f2f2;">{{category.category_name}}</button>
+            {% endfor %}
         </div>
         <button id="right-scroll" class='px-3 py-1'><i class="fa fa-angle-right fs-2" style="color: black;"></i></button>
-
+    </div>
+    <div class="d-flex justify-content-center">
+        <div class="all_blogs d-flex justify-content-center flex-column" style="width:900px;">
+    
+        </div>
     </div>
 </div>
 {% endblock %}
@@ -71,6 +70,45 @@
     document.getElementById('right-scroll').addEventListener('click', ()=>{
         document.getElementById("category_list").scrollBy(300,0);
     })
+
+
+    function appendBlogs(value, idx, arr) {
+        block = document.querySelector('.all_blogs')
+        block.innerHTML += ` 
+        <div class='d-flex gap-2 text-align-vertical'>
+            <img src="${value.profile.profile_img}" style="width:1.7rem;height:1.7rem;" class="rounded-circle" alt="">
+            <form action="http://127.0.0.1:8000/blog/${value.profile.id}/">
+                <button class="dropdown-item" type="submit"><p>${value.profile.name}</p></button>
+            </form>
+        </div>                   
+        <div class="blog_card mb-5">
+            <div class="blog_content me-3">
+                <form action="http://127.0.0.1:8000/blog/${value.slug}/">
+                    <button class="dropdown-item" type="submit"><h4 class="fw-bold fs-5">${value.title}</h4></button>
+                </form>
+                <div  style="height: 70%;padding-bottom: 2rem;">${value.content}</div>
+            </div>
+            <div class="blog_img h-100" style="width: 30%;min-width:200px;">
+                <img class="h-100 w-100" src="${value.blog_image}" alt="">
+            </div>
+        </div>`
+    }
+
+
+    function get_all_blogs() {
+        fetch('http://127.0.0.1:8000/blog/api/tag/{{active_category}}/')
+            .then((response) => {
+                return response.json();
+            })
+            .then((data) => {
+                document.querySelector('.all_blogs').innerHTML = ""
+                data.forEach(appendBlogs);
+            })
+    }
+
+    get_all_blogs()
+
+
 </script>
 
 
