--- a/MyBlog/blog/templates/categoryBlogs.html
+++ b/MyBlog/blog/templates/categoryBlogs.html
@@ -47,7 +47,7 @@
         <button id='left-scroll' class='px-3'><i class="fa fa-angle-left fs-2"></i></button>
         <div id="category_list" class="category_scroll_bar  rounded-pill d-flex gap-2 overflow-x-auto overflow-y-hidden">
             {% for category in category %}
-            <button class="btn rounded-pill {% if active_category == category.category_name %} border border-dark {% endif %} " style="background: #f2f2f2;">{{category.category_name}}</button>
+                <a href="{% url 'category_blogs' category.category_name %}" class="btn rounded-pill {% if active_category == category.category_name %} border border-dark {% endif %} " style="background: #f2f2f2;">{{category.category_name}}</a>
             {% endfor %}
         </div>
         <button id="right-scroll" class='px-3 py-1'><i class="fa fa-angle-right fs-2" style="color: black;"></i></button>
@@ -107,6 +107,7 @@
     }
 
     get_all_blogs()
+
 
 
 </script>
